@@ -2,8 +2,7 @@ package net.frozenblock.lib.worldgen.feature.util;
 
 import java.util.Arrays;
 import java.util.List;
-import net.frozenblock.lib.worldgen.feature.FrozenConfiguredFeature;
-import net.frozenblock.lib.worldgen.feature.FrozenPlacedFeature;
+import net.fabricmc.fabric.api.datagen.v1.provider.FabricWorldgenProvider;
 import net.minecraft.core.Holder;
 import net.minecraft.core.Registry;
 import net.minecraft.data.registries.VanillaRegistries;
@@ -12,8 +11,6 @@ import net.minecraft.data.worldgen.placement.PlacementUtils;
 import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.level.levelgen.feature.ConfiguredFeature;
-import net.minecraft.world.level.levelgen.feature.Feature;
-import net.minecraft.world.level.levelgen.feature.configurations.FeatureConfiguration;
 import net.minecraft.world.level.levelgen.placement.PlacedFeature;
 import net.minecraft.world.level.levelgen.placement.PlacementModifier;
 
@@ -23,20 +20,22 @@ public class FrozenPlacementUtils {
 		return ResourceKey.create(Registry.PLACED_FEATURE_REGISTRY, new ResourceLocation(namespace, path));
 	}
 
-	public static void register(BootstapContext<PlacedFeature> bootstapContext, ResourceKey<PlacedFeature> registryKey, Holder<ConfiguredFeature<?, ?>> holder, List<PlacementModifier> modifiers) {
-		PlacementUtils.register(bootstapContext, registryKey, holder, modifiers);
+	public static void register(
+			FabricWorldgenProvider.Entries entries,
+			ResourceKey<PlacedFeature> registryKey,
+			Holder<ConfiguredFeature<?, ?>> holder,
+			List<PlacementModifier> list
+	) {
+		entries.add(registryKey, new PlacedFeature(holder, List.copyOf(list)));
 	}
 
-	public static void register(BootstapContext<PlacedFeature> bootstapContext, ResourceKey<PlacedFeature> registryKey, Holder<ConfiguredFeature<?, ?>> holder, PlacementModifier... modifiers) {
-		PlacementUtils.register(bootstapContext, registryKey, holder, modifiers);
-	}
-
-	public static FrozenPlacedFeature placedFeature(String namespace, String path, FrozenConfiguredFeature feature, PlacementModifier... modifiers) {
-		return placedFeature(namespace, path, feature, Arrays.asList(modifiers));
-	}
-
-	public static FrozenPlacedFeature placedFeature(String namespace, String path, FrozenConfiguredFeature feature, List<PlacementModifier> modifiers) {
-		return new FrozenPlacedFeature(createKey(namespace, path), feature.getResourceKey(), modifiers);
+	public static void register(
+			FabricWorldgenProvider.Entries entries,
+			ResourceKey<PlacedFeature> registryKey,
+			Holder<ConfiguredFeature<?, ?>> holder,
+			PlacementModifier... placementModifiers
+	) {
+		register(entries, registryKey, holder, List.of(placementModifiers));
 	}
 
 	public static Holder<PlacedFeature> getHolder(ResourceKey<PlacedFeature> resourceKey) {
